--- a/.env
+++ b/.env
@@ -18,3 +18,15 @@
 APP_ENV=dev
 APP_SECRET=
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+DATABASE_URL="mysql://root:moundirMANGA!@127.0.0.1:32769/letterboxd_manga?serverVersion=10.5.8-MariaDB"
+MAL_API_URL="https://api.myanimelist.net/v2/"
+MAL_CLIENT_ID="fea9448bfcf02ed2c536462766165325"
+###< doctrine/doctrine-bundle ###
