--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    MAL_API_URL: '%env(MAL_API_URL)%'
+    MAL_CLIENT_ID: '%env(MAL_CLIENT_ID)%'
 
 services:
     # default configuration for services in *this* file
