--- a/.env
+++ b/.env
@@ -22,8 +22,9 @@ APP_SECRET=
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL="mysql://root:moundirMANGA!@127.0.0.1:32771/letterboxd_manga?serverVersion=10.5.8-MariaDB"
+DATABASE_URL="mysql://root:moundirMANGA!@127.0.0.1:32768/letterboxd_manga?serverVersion=10.5.8-MariaDB"
 MAL_API_URL="https://api.myanimelist.net/v2/"
+COMMENTS_API_URL="http://127.0.0.1:46499/api"
 MAL_CLIENT_ID="fea9448bfcf02ed2c536462766165325"
 ###< doctrine/doctrine-bundle ###
 
