--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     MAL_API_URL: '%env(MAL_API_URL)%'
+    COMMENTS_API_URL: '%env(COMMENTS_API_URL)%'
     MAL_CLIENT_ID: '%env(MAL_CLIENT_ID)%'
 
 services:
